Skip to content
GitLab
  • Explore
  • Sign in
  • Register
  • PulseAudioPulseAudio
  • pulseaudiopulseaudio
  • Issues
  • #1022

Follow-up from "Fix availability groups"

The following discussion from !379 (merged) should be addressed:

  • @jason77wang started a discussion: (+8 comments)

    @tanuk @perexg @arun

    There is a bug reported to libgvc: https://gitlab.gnome.org/GNOME/libgnome-volume-control/-/issues/15

    I guess this MR could not fix that problem. Looks like we still need to make availability_group setting perfect.

    So far 2 problems I could think of:

    1. analog-input-internal-mic should not be assigned a availability_group
    2. analog-input-mic, analog-input-dock-mic and ... shouldn't be assigned a availability_group, only analog-input-headphone-mic and analog-input-headset-mic should be assigned a availability_group. (analog-input-mic, analog-input-dock-mic and ..., they all have hardware detection capability, they don't need to share audio jack with headphone).
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking